--- a/MyStaplesCupboard.Javascript.Tests.csproj
+++ b/MyStaplesCupboard.Javascript.Tests.csproj
@@ -34,6 +34,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="scripts\measurement.js" />
+    <Content Include="scripts\utilities.js" />
+    <Content Include="tests\measurementTests.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
